--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -10,11 +10,8 @@
     <div id="quoteDisplay"></div>
     <button id="newQuote">Show New Quote</button>
     
-    <div>
-        <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
-        <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
-        <button onclick="addQuote()">Add Quote</button>
-      </div>
+    <button id="exportQuotes">Export Quotes</button>
+    <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
     <script src="script.js"></script>
   </body>
   </html>
